# pks-linter-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.example.ini
.github/workflows/: ci.yml
include/: AnalysisResult.h  AnalyzerEngine.h  Config.h  ConfigLoader.h  ConfigManager.h  ConsoleProgressObserver.h  FileContext.h  FileScanner.h  IAnalysisObserver.h  IObserver.h  InteractiveConfig.h  Issue.h  IssueEvent.h  Reporter.h  ReporterObserver.h  Rule.h  RuleFactory.h  SeverityUtil.h  Tokenizer.h
include/rules/: IndentationRule.h  LineLengthRule.h  MemoryLeakRule.h  NamingRule.h  SpacingRule.h  UseBeforeInitRule.h
sample_project/: main.cpp  memory_leak.cpp  style_problems.cpp  use_before_init.cpp  utf8_comments.cpp  utils.hpp
src/: AnalyzerEngine.cpp  ConfigLoader.cpp  FileScanner.cpp  InteractiveConfig.cpp  Reporter.cpp  RuleFactory.cpp  Tokenizer.cpp  main.cpp
src/rules/: IndentationRule.cpp  LineLengthRule.cpp  MemoryLeakRule.cpp  NamingRule.cpp  SpacingRule.cpp  UseBeforeInitRule.cpp
tests/: CMakeLists.txt
tests/scenarios/: CMakeLists.txt  scenario_config_roundtrip.cpp  scenario_interactive_config.cpp  scenario_large_project.cpp  scenario_observer_flow.cpp  scenario_sample_analysis.cpp  scenario_support.h
tests/unit/: CMakeLists.txt  analyzer_engine_tests.cpp  config_and_factory_tests.cpp  config_loader_tests.cpp  config_manager_tests.cpp  file_scanner_tests.cpp  reporter_and_observer_tests.cpp  reporter_tests.cpp  rule_bug_tests.cpp  rule_factory_tests.cpp  rule_style_tests.cpp  rule_tests.cpp  scenario_helpers.h  test_support.h  tokenizer_tests.cpp
